samples/_failures_safe/1761359367_1ee20f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03b3f81f.c: In function ‘get_operation’:
./samples/SAFE/__tmp_03b3f81f.c:132:5: error: expected expression at end of input
  132 |     if (scanf("%d",
      |     ^~
./samples/SAFE/__tmp_03b3f81f.c:132:5: error: expected declaration or statement at end of input
